# Hackathon-II-Todo-Spec-Driven

./: README.md
phase-1/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
phase-1/history/prompts/001-todo-console-app/: 0001-todo-console-app-planning.plan.prompt.md  0002-generate-tasks-md.tasks.prompt.md  0003-execute-implementation.green.prompt.md
phase-1/history/prompts/constitution/: 1-update-todo-constitution.constitution.prompt.md
phase-1/history/prompts/general/: 001-implement-todo-cli-app.general.prompt.md
phase-1/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/001-todo-console-app/checklists/: requirements.md
phase-1/specs/001-todo-console-app/contracts/: cli_contract.yaml
phase-1/src/: main.py
phase-1/src/todo_app/: main.py
phase-1/src/todo_app/cli/: main.py
phase-1/src/todo_app/models/: task.py
phase-1/src/todo_app/services/: __init__.py  persistent_storage.py  task_service.py
phase-1/src/todo_app/utils/: helpers.py
phase-1/tests/: conftest.py
phase-1/tests/integration/: test_cli.py
phase-1/tests/unit/: test_task.py  test_task_service.py
phase-2/: .gitignore  README.md  package-lock.json  package.json
phase-3/: .dockerignore  .gitignore  .prettierignore  DUPLICATE_TABLE_DEFINITION_FIX.md  README.md  REALTIME_SYNC_IMPLEMENTATION.md  SSL_CONNECTION_FIX.md  check_columns.py  docker-compose.yml  integration_test.py  integration_test_ws.ts  update_schema.py
phase-4/: .gitignore  IMPLEMENTATION_SUMMARY.md  PREREQUISITES.md  README.md  (+2 more)
(+368 files in other folders)
