[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-console-app"
version = "0.1.0"
description = "A command-line todo application that stores tasks in memory"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=7.0.0",
]

[project.scripts]
todo_app = "src.todo_app.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
